fixed regression bug with uploading YAML slight modification to syntax on pointcuts