@@ -52,7 +52,7 @@ echo "detected modules: $detected_modules"
 
 # ------ MANUAL MODULES -----------------------------------------------------
 
-manual_modules=,jdk.localedata,jdk.unsupported,java.xml,java.scripting,jdk.zipfs,java.rmi
+manual_modules=,jdk.localedata,jdk.unsupported,java.xml,java.scripting,jdk.zipfs,java.rmi,java.naming,java.desktop
 echo "manual modules: $manual_modules"
 
 # ------ RUNTIME IMAGE ------------------------------------------------------
@@ -85,6 +85,11 @@ APP_NAME=PADDL
 --java-options --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
 --java-options --add-opens=java.base/java.lang=ALL-UNNAMED \
 --java-options --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+--java-options --add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix \
+--java-options --add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix \
+--java-options --add-exports=javafx.base/com.sun.javafx.event=com.jfoenix \
+--java-options --add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix \
+--java-options --add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix \
 --runtime-image target/java-runtime \
 --icon src/main/resources/com/wecca/canoeanalysis/images/canoe.icns \
 --app-version "$APP_VERSION" \
@@ -118,3 +123,4 @@ echo "Creating DMG installer"
 --copyright "Copyright © 2024 WECCA" \
 --mac-package-identifier com.wecca.canoeanalysis \
 --mac-package-name "$APP_NAME"
+
